kube_files/services/database/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: database
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: database
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (HEAD)
      labels:
        io.kompose.service: database
    spec:
      containers:
        - env:
            - name: PGPORT
              valueFrom:
                secretKeyRef:
                  name: aws-secrets
                  key: PG_PORT
            - name: POSTGRES_DB
              valueFrom:
                secretKeyRef:
                  name: aws-secrets
                  key: PG_DB
            - name: POSTGRES_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: aws-secrets
                  key: PG_PASSWORD
            - name: POSTGRES_USER
              valueFrom:
                secretKeyRef:
                  name: aws-secrets
                  key: PG_USER
            - name: POSTGRES_HOST_AUTH_METHOD
              value: trust
            - name: POSTGRES_HOST
              valueFrom:
                secretKeyRef:
                  name: aws-secrets
                  key: PG_HOST
          image: postgres
          livenessProbe:
            exec:
              command:
                - pg_isready
            failureThreshold: 10
            periodSeconds: 1
            timeoutSeconds: 5
          name: database
          ports:
            - containerPort: 5435
              protocol: TCP
          volumeMounts:
            - name: secrets-store
              mountPath: "/mnt/secrets"
              readOnly: true
            - mountPath: /var/lib/postgresql/data
              name: database-data
          args:
            - "-c"
            - "listen_addresses=*"
            - "-c"
            - "wal_level=minimal"
            - "-c"
            - "archive_mode=off"
            - "-c"
            - "max_wal_senders=0"
      restartPolicy: Always
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: aws-secrets
        - name: database-data
          persistentVolumeClaim:
            claimName: database-data
