kube_files/services/database/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  type: ClusterIP
  ports:
    - port: 5435
      targetPort: 5435
      protocol: TCP
  selector:
    app: database
